--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # Node
 node_modules/
+dist/
+*.tsbuildinfo
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -29,4 +31,3 @@ temp/
 
 # Logs
 *.log
-
