--- a/package.json
+++ b/package.json
@@ -14,15 +14,23 @@
   },
   "dependencies": {
     "@hapi/boom": "^10.0.1",
+    "@google/generative-ai": "^0.24.0",
     "@whiskeysockets/baileys": "latest",
+    "axios": "^1.7.9",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-validator": "^7.3.1",
+    "form-data": "^4.0.0",
+    "jsdom": "^24.0.0",
     "ldapjs": "^3.0.7",
     "multer": "^2.0.2",
+    "mssql": "^11.0.1",
+    "openai": "^4.80.0",
     "pino": "^8.16.1",
+    "pdf-parse": "^1.1.1",
     "qrcode": "^1.5.3",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "tesseract.js": "^5.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.11",
@@ -31,7 +39,10 @@
     "@types/ldapjs": "^3.0.6",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.11.30",
+    "@types/mssql": "^9.1.6",
+    "@types/jsdom": "^21.1.7",
     "@types/qrcode": "^1.5.5",
+    "@types/pdf-parse": "^1.1.4",
     "typescript": "^5.4.5"
   }
 }
