--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.3.1",
     "form-data": "^4.0.0",
+    "ioredis": "^5.5.0",
     "jsdom": "^24.0.0",
     "ldapjs": "^3.0.7",
     "multer": "^2.0.2",
